# wirearch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: config.rs  geo.rs  killswitch.rs  main.rs  manager.rs  metrics.rs  store.rs  wg.rs
dbus/: tr.cebi.wirearch.Manager.xml
docs/: ARCHITECTURE.md  BUILDING.md  FEATURES.md
gui/: CMakeLists.txt
gui/qml/: Main.qml  StatisticsPage.qml  TunnelEditPage.qml
gui/src/: main.cpp  manager.cpp  manager.h  tray.cpp  tray.h
packaging/: PKGBUILD  org.kde.wirearch.desktop
packaging/dbus/: tr.cebi.wirearch.conf  tr.cebi.wirearch.service
packaging/pkg/wirearch-git/: .BUILDINFO  .MTREE  .PKGINFO
packaging/pkg/wirearch-git/usr/lib/modules-load.d/: wirearch.conf
packaging/pkg/wirearch-git/usr/lib/systemd/system/: wirearchd.service
packaging/pkg/wirearch-git/usr/share/plasma/plasmoids/tr.cebi.wirearch/: metadata.json
packaging/pkg/wirearch-git/usr/share/plasma/plasmoids/tr.cebi.wirearch/contents/ui/: main.qml
packaging/pkg/wirearch-git/usr/share/polkit-1/actions/: tr.cebi.wirearch.policy
packaging/systemd/: wirearch.sysusers  wirearchd.service
packaging/wirearch/: config  packed-refs
packaging/wirearch/objects/pack/: pack-6c9c0e696616eaa7145dbde31f51372b5917c91b.idx  pack-6c9c0e696616eaa7145dbde31f51372b5917c91b.pack  pack-6c9c0e696616eaa7145dbde31f51372b5917c91b.rev
plasmoid/package/: metadata.json
plasmoid/package/contents/ui/: main.qml
samples/: tunnel.conf.example
scripts/: fetch-geoip.sh
