[package]
name = "wirearchd"
version = "0.3.0"
edition = "2021"
description = "WireArch privileged WireGuard service"
license = "GPL-3.0-or-later"
repository = "https://github.com/can61cebi/wirearch"

[[bin]]
name = "wirearchd"
path = "src/main.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
defguard_wireguard_rs = "0.10"
maxminddb = "0.28.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
zbus_polkit = "5.0.0"
